--- a/deck.mdx
+++ b/deck.mdx
@@ -18,6 +18,8 @@ import chroniclerDate from './assets/chroniclerDate.png'
 import sinatra from './assets/sinatra.png'
 import codeCovenant from './assets/codeCovenant.png'
 import openSource101CC from './assets/openSource101CC.png'
+import allContributors from './assets/allContributors.png'
+import firstIssue from './assets/firstIssue.png'
 
 import catTyping from './assets/catTyping.gif'
 
@@ -193,6 +195,27 @@ import catTyping from './assets/catTyping.gif'
 - Without a strong sense of community, there would be no Open Source 101 conference. 
 - Without the thousands of communities out there today, there would be no open source at all.
 - Just like I said in my original blog post, there are a lot of ways you can focus on community while you’re open sourcing your work
+
+
+</Notes>
+
+
+---
+
+
+<Layout layout={layouts.sectionTitle} theme={themes.light}>
+
+<List>
+  <li>Be Welcoming</li>
+  <li>Be Inclusive</li>
+  <li>Help Others Learn</li>
+  <li>Help Others Contribute</li>
+</List>
+
+</Layout>
+
+<Notes>
+
 - Today, I’m going to focus on just a few quick, tactical tips I’ve picked up along the way.
 
 
@@ -210,6 +233,7 @@ import catTyping from './assets/catTyping.gif'
 
 <Notes>
 
+- to start off, we want our community to be open and welcoming. This will make newcomers feel at home and contributors coming back to keep helping.
 - first impressions can be long-lasting, so do all you can to make folks feel welcome when they first discover your project.
 
 
@@ -246,7 +270,7 @@ import catTyping from './assets/catTyping.gif'
 
 <Notes>
 
-- you can add your motivation for the projectin your README, describe who it serves, and any values or principles that help guide you as you work.
+- you can add your motivation for the project in your README, describe who it serves, and any values or principles that help guide you as you work.
 - this can give your community something to come together on, and helps motivate everyone to make progress together.
 
 
@@ -264,7 +288,7 @@ import catTyping from './assets/catTyping.gif'
 
 <Notes>
 
-- Your readme is also a great place to show gratitude.
+- Your readme is also a great place to express gratitude.
 - You can thank newcomers for coming to visit in the first place, and show some love to the different contributors that help make your project everything that it is. 
 
 </Notes>
@@ -273,11 +297,7 @@ import catTyping from './assets/catTyping.gif'
 ---
 
 
-<Layout showWebsite={true} layout="introLayout">
-
-## `all-contributors`
-
-</Layout>
+<FullImage src={allContributors} />
 
 <Notes>
 
@@ -324,12 +344,36 @@ import catTyping from './assets/catTyping.gif'
 
 <Layout layout={layouts.sectionTitle} theme={themes.light}>
 
+<List appear={false}>
+  <li style={{fontWeight: 'bold'}}>Be Welcoming</li>
+  <li>Be Inclusive</li>
+  <li>Help Others Learn</li>
+  <li>Help Others Contribute</li>
+</List>
+
+</Layout>
+
+<Notes>
+
+- Making people feel welcome and valued is a key part to a strong sense of community.
+- There are simple ways to accomplish this, like the ones I shared here, but don't be afraid to put your own spin on a welcoming committee that's right for your project.
+
+
+</Notes>
+
+
+---
+
+
+<Layout layout={layouts.sectionTitle} theme={themes.light}>
+
 # Be Inclusive
 
 </Layout>
 
 <Notes>
 
+- The next pillar of a great community is inclusivity
 - For your open source project to have a great community, you must also be Inclusive
 - emphasize the importance of kindness and multual respect in all aspects of what community members do. And again, put that in your README.md or somewhere equally prominent.
 
@@ -470,6 +514,29 @@ import catTyping from './assets/catTyping.gif'
 ---
 
 
+<Layout layout={layouts.sectionTitle} theme={themes.light}>
+
+<List appear={false}>
+  <li>Be Welcoming</li>
+  <li style={{fontWeight: 'bold'}}>Be Inclusive</li>
+  <li>Help Others Learn</li>
+  <li>Help Others Contribute</li>
+</List>
+
+</Layout>
+
+<Notes>
+
+- A sense of belonging in your community can distinguish you from the many other projects a user or contributor can spend their time on.
+- Take this to heart, and commit to making your community experiences feel open, safe, and supportive.
+
+
+</Notes>
+
+
+---
+
+
 <Layout showWebsite={true} layout="introLayout">
 
 ## Help others learn
@@ -480,7 +547,26 @@ import catTyping from './assets/catTyping.gif'
 
 - No matter what your experience level, brand new to programming or years of experience under your belt...
 - everyone is going to need a little extra help at some point.
-- Optimize how your users and contributors can get up and running, and feeling confident 
+- having a supportive learning environment will attract folks from all different levels, and enable them to grow along with your project.
+
+</Notes>
+
+
+---
+
+<Layout showWebsite={true} layout="introLayout">
+
+## Docs, docs, docs
+
+</Layout>
+
+<Notes>
+
+- documentation can make or break your project, so take extra care to write documentation that is accesible, understandable, and easy to discover.
+- besides your README and static documentation sites, consider creating tutorials, walkthroughs and examples that will really help people learn deeply and quickly.
+- Remember, there is a person at the other end of your documentation. Help them succeed in learning by keeping your docs up to date and helpful.
+
+
 
 </Notes>
 
@@ -539,6 +625,29 @@ import catTyping from './assets/catTyping.gif'
 ---
 
 
+<Layout layout={layouts.sectionTitle} theme={themes.light}>
+
+<List appear={false}>
+  <li>Be Welcoming</li>
+  <li>Be Inclusive</li>
+  <li style={{fontWeight: 'bold'}}>Help Others Learn</li>
+  <li>Help Others Contribute</li>
+</List>
+
+</Layout>
+
+<Notes>
+
+- Building a culture of teaching and learning in your community helps bring people together and creates strong, human connections.
+- There's plenty you can do to help your users and contributors become fluent in your particular project, so always be on the lookout for how you can enable your community to do their best work.
+
+
+</Notes>
+
+
+---
+
+
 <Layout showWebsite={true} layout="introLayout">
 
 ## Help Others Contribute
@@ -547,6 +656,7 @@ import catTyping from './assets/catTyping.gif'
 
 <Notes>
 
+- The last pillar of your great community should be to help others contribute
 - Make it super easy for folks to participate in your community, and encourage them to do so!
 
 
@@ -566,6 +676,36 @@ import catTyping from './assets/catTyping.gif'
 
 - Make sure you have a contributing doc to tell folks how they can get started, where they can jump in, and how they can reach out for help.
 
+
+</Notes>
+
+
+---
+
+
+<Layout showWebsite={true} layout="introLayout">
+
+## Good first issue
+
+</Layout>
+
+<Notes>
+
+- It can be intimidating for a newcomer to land on a project their excited to participate in and have no idea where to start.
+
+</Notes>
+
+
+---
+
+
+<FullImage src={firstIssue} />
+
+<Notes>
+
+- Make a habit of labeling different issues based on how difficult they might be to tackle, and make it especially clear when a task would be suited best for beginners.
+- you'll see here that the react codebase has a label for all open issues that are approachable enough for beginners to take on.
+- this encourages new contributors to submit their own work and helps to grow your community ranks
 
 </Notes>
 
@@ -610,6 +750,29 @@ import catTyping from './assets/catTyping.gif'
 ---
 
 
+<Layout layout={layouts.sectionTitle} theme={themes.light}>
+
+<List appear={false}>
+  <li>Be Welcoming</li>
+  <li>Be Inclusive</li>
+  <li>Help Others Learn</li>
+  <li style={{fontWeight: 'bold'}}>Help Others Contribute</li>
+</List>
+
+</Layout>
+
+<Notes>
+
+- Maintaining your open source project won't be easy, and it'll be particularly hard at first when you're on your own.
+- the faster you can get folks to contribute, the easier it will be to share the responsibility of maintaining a great project.
+
+
+</Notes>
+
+
+---
+
+
 <Layout showWebsite={true} layout="introLayout">
 
 ## How to take your open source project from good to great
@@ -636,8 +799,7 @@ import catTyping from './assets/catTyping.gif'
 
 <Notes>
 
-- Building a community comes in many forms.
-- Ultimately, it comes down to keeping people at the center of your work.
+- Ultimately, building a great community, it comes down to keeping people at the center of your work.
 - Whether you're writing documentation, hosting meetups, building up processes around code review, or setting up continuous integration pipelines: think about how best to serve the people in your community.
 - and you'll almost certainly take your open source project from good to great.
 
