--- a/deck.mdx
+++ b/deck.mdx
@@ -218,6 +218,9 @@ import catTyping from './assets/catTyping.gif'
 <Notes>
 
 - Today, I’m going to focus on just a few quick, tactical tips I’ve picked up along the way.
+- [GO THROUGH THE LIST]
+- These are just the four cornerstones i'm going to focus on today to get you thinking about community in your open source project.
+- But there are a few other sessions later on that focus more deeply on community building, so I highly encourage you to check those out.
 
 
 </Notes>
@@ -387,6 +390,23 @@ import catTyping from './assets/catTyping.gif'
 
 <Layout layout={layouts.introLayout} theme={themes.dark}>
 
+## Build a healthy culture
+
+</Layout>
+
+<Notes>
+
+- Be as intentional and thoughtful about the culture you're trying to build.
+- good culture doesn't happen by accident. You need to cultivate it and nurture it into what you all want it to be.
+
+</Notes>
+
+
+---
+
+
+<Layout layout={layouts.introLayout} theme={themes.dark}>
+
 ## Code Review
 
 </Layout>
@@ -400,24 +420,6 @@ import catTyping from './assets/catTyping.gif'
 
 ---
 
-
-<Layout layout={layouts.introLayout} theme={themes.dark}>
-
-## Build a healthy culture
-
-</Layout>
-
-<Notes>
-
-- and try to be as intentional and thoughtful about the culture you're trying to build.
-- good culture doesn't happen by accident. You need to cultivate it and nurture it into what you all want it to be.
-
-</Notes>
-
-
----
-
-
 <Layout showWebsite={true} layout={layouts.introLayout}>
 
 ## Code of Conduct
@@ -426,7 +428,7 @@ import catTyping from './assets/catTyping.gif'
 
 <Notes>
 
-- a code of conduct helps to reinforce that culture.
+- a code of conduct helps to reinforce the culture you're trying to build.
 - and is one small part of creating a space that is safe and welcoming for all people
 - will make it very clear what kind of behavior is not tolerated when participating in your community
  
