--- a/deck.mdx
+++ b/deck.mdx
@@ -21,6 +21,7 @@ import openSource101CC from './assets/openSource101CC.png'
 import allContributors from './assets/allContributors.png'
 import firstIssue from './assets/firstIssue.png'
 import chroniclerMeetup from './assets/chroniclerMeetup.jpeg'
+import tweet from './assets/tweet.png'
 
 import catTyping from './assets/catTyping.gif'
 
@@ -430,7 +431,21 @@ import catTyping from './assets/catTyping.gif'
 
 - a code of conduct helps to reinforce the culture you're trying to build.
 - and is one small part of creating a space that is safe and welcoming for all people
-- will make it very clear what kind of behavior is not tolerated when participating in your community
+ 
+
+</Notes>
+
+
+---
+
+<img src={tweet} />
+
+<Notes>
+
+- I found this tweet last night from Josh simmons, he's giving a talk right after me, hi josh!
+- [read the tweet]
+- Your code of conduct will make it very clear what kind of behavior is expected and what behavior is absolutely not tolerated when participating in your community
+- it's an extension of your community values and principles and should be used to help protect your community from harm
  
 
 </Notes>
